@@ -5,7 +5,11 @@ Revision history for {{$dist->name}}
  - Dependencies changed since 2.000000, see misc/*.deps* for details
  - configure: ↓1 (recommends: ↑1)
  - develop: +7 ↑2 -3 (suggests: +2 -1)
+ - runtime: -1
  - test: +2 ↑1 -4 (recommends: ↑3 -1)
+
+ [Internals]
+ - Stop Autoboxing
 
  [Metadata]
  - move repo to kentnl org
